--- a/app/src/index.html
+++ b/app/src/index.html
@@ -21,9 +21,9 @@
     <meta name="format-detection" content="telephone=no, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="msapplication-tap-highlight" content="no">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
-    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css"/>
-    <link rel="stylesheet" href="src/css/app.css"/>
-    <link rel="stylesheet" type="text/css" href="src/css/index.css">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <style type="text/css">
         /**
@@ -37,7 +37,6 @@
   </head>
 
   <body ng-app="starterApp" layout="row" ng-controller="UserController as ul" ng-cloak >
-
   <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2"
       md-component-id="left"
       ng-click="ul.toggleList()" aria-label="Show User List"
@@ -65,7 +64,7 @@
       <md-button id="main" class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show User List">
         <md-icon md-svg-icon="menu" ></md-icon>
       </md-button>
-      <h3>Angular Material - Starter App</h3>
+      <h3>CPA - Starter App</h3>
     </md-toolbar>
 
     <md-content flex id="content">
@@ -81,17 +80,17 @@
 
   </div>
 
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../node_modules/angular-animate/angular-animate.js"></script>
-    <script src="../node_modules/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
+    <script src="node_modules/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
 
-    <script src="./src/users/Users.js"></script>
-    <script src="./src/users/UserController.js"></script>
-    <script src="./src/users/UserService.js"></script>
+    <script src="./users/Users.js"></script>
+    <script src="./users/UserController.js"></script>
+    <script src="./users/UserService.js"></script>
 
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="src/js/index.js"></script>
+    <!--[><script type="text/javascript" src="cordova.js"></script><]-->
+    <!--[><script type="text/javascript" src="src/js/index.js"></script><]-->
 
     <script type="text/javascript">
 
